--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,6 +17,6 @@
     <p><strong>Mood:</strong>  <%= @user.mood %></p>
     <p><strong>Height:</strong> <%= @user.height %> inches</p>
 
-    <p><%= link_to 'See Attractions', attractions_path %></p>
+    <p><%= link_to 'See attractions', attractions_path %></p>
   </div>
 </div>
